--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -143,7 +143,7 @@ header {
   padding-top: @page-header-height + 12px;
   padding-bottom: @footer-height;
 
-  .inner-page-content-container, .inner-page-content {
+  .inner-page-content-container {
     height: inherit;
     position: relative;
     overflow-y: auto;
