Omnibar:  * added note and task edit to omnibar  * changed omni-button omnibar input label to button  * omni button :hover and :active colors  * removed unused omnibarFeature scope variable from dashboardDirective  * moved omnibar code from ItemsController to OmnibarController  * moved omnibar keyword code from NotesController to OmnibarController  * set showDateInput false on dateInputDirective $destroy event  * initialize newKeyword object in NotesController  * removed note and task edit  * removed featureChangedCallback from NotesController and TasksController  * refactoring

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -353,6 +353,21 @@ button.transparent-button {
   }
 }
 
+button.tab-button {
+  color: white;
+    background-color: @tab-button;
+  &:hover {
+    background-color: @tab-button-hover;
+  }
+  &:active {
+    background-color: @tab-button-pressed;
+  }
+  &[disabled] {
+    color: black;
+    background-color: white;
+  }
+}
+
 // CHECKBOXES
 
 // Make labels clickable
