--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -68,6 +68,10 @@
 @default-button-pressed: darken(@default-button, 20%);
 @default-button-disabled: lighten(@default-button, 20%);
 
+@tab-button: #b0b0b6;
+@tab-button-hover: darken(@tab-button, 10%);
+@tab-button-pressed: darken(@tab-button, 20%);
+
 @highlighted-button: #0f82fe;
 @highlighted-button-pressed: darken(@highlighted-button, 20%);
 @highlighted-button-disabled: lighten(#b0b0b6, 20%);
