--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -68,12 +68,13 @@ header {
     margin-left: auto;
     margin-right: auto;
     .active-item-container {
-      width: 30%;
+      width: 23%;
       height: @page-header-height;
       float: left;
     }
     .heading-container {
-      width: 40%;
+      // NOTE: this width percentage is used in HeadingController.js!
+      width: 54%;
       height: @page-header-height;
       float: left;
       display: table;
@@ -84,9 +85,10 @@ header {
       }
     }
     .omni-button-container {
+      width: 23%;
       height: @page-header-height;
       float: right;
-      text-align: center;
+      text-align: right;
       label {
         display: block;
       }
