--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -337,6 +337,9 @@ footer {
     .list-last {
       margin-bottom: @vertical-grid-half;
     }
+    .edit-list-link {
+      color: @default-element;
+    }
     .lists-heading-container {
       display: table;
       .feature-link {
