Fixed invalid space character in LESS file

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -184,8 +184,6 @@ header.static-page-header {
   .long-heading .heading {
     font-size: @small-font-size;
   }
-
-
   .omni-button {
     .button;
     line-height: normal;
@@ -337,7 +335,7 @@ footer {
     .list-last {
       margin-bottom: @vertical-grid-half;
     }
-    .edit-list-link {
+    .edit-lists-link {
       color: @default-element;
     }
     .lists-heading-container {
