Fixed scrolling to add item.. element on keywords, contexts and lists.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -481,6 +481,10 @@ select {
   }
 }
 
+.list-last {
+  margin-bottom: @vertical-grid-half;
+}
+
 // Multirow item indent fixed
 .single-lineheight {
   table {
