Changed add note... to use omnibar input

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -368,6 +368,12 @@ button.tab-button {
   }
 }
 
+button.add-button {
+  .simple-input;
+  background-color: white;
+  color: @default-element;
+}
+
 // CHECKBOXES
 
 // Make labels clickable
