--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -167,6 +167,16 @@ header {
   }
 }
 
+.show-footer.single-page-container {
+  margin-bottom: -60px;
+}
+
+.hide-footer {
+  .single-page-content-container {
+    padding-bottom: @vertical-grid-half;
+  }
+}
+
 .hide-footer .page-content-container {
   padding-bottom: @vertical-grid-half;
 }
