Click elsewhere on empty search tab to hide omnibar. CSS selectors for omnibar search elements.

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -251,17 +251,17 @@ footer {
   }
   .omnibar-feature {
     width: 100%;
-    // margin-top: 12px;
     float: left;
     overflow-y: auto;
     // height set with javascript
-
-    .filtered-items-placeholder {
+    .omnibar-search {
       height: 100%;
-      // width set with javascript
-    }
-    .filtered-items {
-      padding-top: @vertical-grid-half;
+      .omnibar-empty-search-placeholder {
+        height: 100%;
+      }
+      .filtered-items {
+        padding-top: @vertical-grid-half;
+      }
     }
   }
   .omnibar-footer {
