Fixed omnibar exit problem with content nudging down until animation ends.

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -280,8 +280,9 @@ footer {
 }
 
 .omnibar-animation.ng-enter, .omnibar-animation.ng-leave {
-  left: @horizontal-grid;
-  right: @horizontal-grid;
+  position: absolute;
+  left: 0;
+  right: 0;
 }
 
 .omnibar-animation.ng-enter {
