Bigger clicking area for omnibar footer

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -265,12 +265,17 @@ footer {
     }
   }
   .omnibar-footer {
-    height: 44px;
+    height: @footer-height;
     .omnibar-footer-button-left {
       float: left;
+      padding: 15px 15px 15px 0px;
     }
     .omnibar-footer-button-right {
       float: right;
+      padding: 15px 0px 15px 15px;
+    }
+    .button {
+
     }
   }
 }
