Swapped expanding textarea plugin to Angular Elastic https://github.com/monospaced/angular-elastic which works without timeouting.

--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -104,7 +104,14 @@ input, select, textarea {
 
 textarea {
   min-height: @vertical-grid / 2;
+  height: @vertical-grid / 2;
+  //display: inline-block;
+  vertical-align: middle;
   .break-words;
+}
+
+::-webkit-resizer {
+    display: none;
 }
 
 button {
