Changed omnibar to resizing textarea, font becomes smaller as text grows

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -248,6 +248,16 @@ footer {
   }
   .omnibar-input {
     font-size: @large-font-size;
+    max-height: @vertical-grid;
+    &.omnibar-input-medium{
+      font-size: @default-font-size;
+    }
+    &.omnibar-input-long{
+      font-size: @small-font-size;
+    }
+    &.omnibar-input-very-long{
+      font-size: @smallest-font-size;
+    }
   }
   .omnibar-feature {
     width: 100%;
