--- a/backend/src/main/resources/templates/resetPassword.html
+++ b/backend/src/main/resources/templates/resetPassword.html
@@ -15,11 +15,11 @@
       <div id="em-description" style="padding-top: 15px;max-width: 375px;margin-left: auto;margin-right: auto;line-height: 28px;">
         <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
           <p>find below a link to reset your password to the extended mind service.</p>
-          <p>if you did not ask to reset your password you can ignore this message.</p>          
+          <p>if you did not ask to reset your password you can ignore this message.</p>
         </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="resetPasswordLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size: 15px;">click here to reset your password</span></a>
+        <a href="resetPasswordLink" style="text-decoration: none;color: white;"><div id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size: 15px;"><span style="word-wrap: break-word; -ms-word-break: break-all; word-break: break-all; word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto;">click here to reset your password</span></div></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
