--- a/backend/src/main/resources/templates/verifyEmail.html
+++ b/backend/src/main/resources/templates/verifyEmail.html
@@ -19,7 +19,7 @@
         </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="verifyEmailLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size: 15px;">click here to verify your email</span></a>
+        <a href="verifyEmailLink" style="text-decoration: none;color: white;"><div id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size: 15px;"><span style="word-wrap: break-word; -ms-word-break: break-all; word-break: break-all; word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto;">click here to verify your email</span></div></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
