Removed content feature caching, omnibar layout fixes

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -577,7 +577,11 @@ a.content:active {
   .icon-logo-only{
     font-size: @small-font-size;
   }
-  .instruction-text-chapter {
+  .instruction-text-chapter {
+    padding-bottom: @vertical-grid;
+  }
+  .instruction-text-chapter-details {
+    font-size: @small-font-size;
     padding-bottom: @vertical-grid;
   }
 }
