--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -148,7 +148,11 @@ section#signup {
     .banner {
       margin-bottom: -@vertical-grid * 7;
     }
+    .banner:after {
+      height: @vertical-grid * 7;
+    }
     .content {
+      height: @vertical-grid * 7;
       span#agreeText {
         font-size: @small-font-size;
         color: @content;
