Nicer layout for inline tasks and notes

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -90,6 +90,10 @@ div#closedAccordionTitleWrapper {
   color: @default-element;
 }
 
+.tasks-notes-container {
+  padding-top: @vertical-grid-half;
+}
+
 // TEASER
 
 .teaser {
