--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -82,6 +82,13 @@
 @delete-button: #e22c09;
 @delete-button-pressed: darken(@delete-button, 20%);
 
+@pikaday-button: #f5f5f5;
+@pikaday-button-hover: darken(@pikaday-button, 10%);
+
+@pikaday-selected-button: #0f82fe;
+@pikaday-selected-button-hover: darken(@pikaday-selected-button, 10%);
+@pikaday-selected-button-pressed: darken(@pikaday-selected-button, 20%);
+
 @overdue-task: @delete-button;
 
 // Misc
