--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -626,17 +626,22 @@ li.datepicker-date {
   }
 }
 
-.toaster-notification.ng-enter, .toaster-notification.ng-leave {
+.toaster-notification.ng-enter, .toaster-notification.ng-leave,
+.pikaday-animation.ng-enter, .pikaday-animation.ng-leave {
   -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
   transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
 }
 
 .toaster-notification.ng-enter,
-.toaster-notification.ng-leave.ng-leave-active {
+.toaster-notification.ng-leave.ng-leave-active,
+.pikaday-animation.ng-enter,
+.pikaday-animation.ng-leave.ng-leave-active {
   opacity: 0;
 }
 
 .toaster-notification.ng-leave,
-.toaster-notification.ng-enter.ng-enter-active {
+.toaster-notification.ng-enter.ng-enter-active,
+.pikaday-animation.ng-leave,
+.pikaday-animation.ng-enter.ng-enter-active {
   opacity: 1;
 }
