--- a/frontend/core/src/main/webapp/static/less/pikaday.less
+++ b/frontend/core/src/main/webapp/static/less/pikaday.less
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 .pika-single {
     z-index: 9999;
     display: block;
@@ -8,7 +6,11 @@
     background: #fff;
     border: 1px solid #ccc;
     border-bottom-color: #bbb;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.pikaday-embedded .pika-single {
+    z-index: auto;
+    border: none;
 }
 
 /*
@@ -38,6 +40,12 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     margin: 8px;
 }
 
+.pikaday-embedded .pika-lendar {
+    width: 100%;
+    padding: 8px;
+    margin: 0;
+}
+
 .pika-title {
     position: relative;
     text-align: center;
@@ -51,11 +59,15 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     overflow: hidden;
     margin: 0;
     padding: 5px 3px;
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: bold;
+    font-size: @small-font-size;
+    line-height: 30px;
     background-color: #fff;
 }
+
+.pikaday-embedded .pika-label {
+    z-index: auto;
+}
+
 .pika-title select {
     cursor: pointer;
     position: absolute;
@@ -67,6 +79,10 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     opacity: 0;
 }
 
+.pikaday-embedded .pika-title select {
+    z-index: auto;
+}
+
 .pika-prev,
 .pika-next {
     display: block;
@@ -75,7 +91,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     outline: none;
     border: 0;
     padding: 0;
-    width: 20px;
+    width: 40px;
     height: 30px;
     /* hide text using text-indent trick, using width value (it's enough) */
     text-indent: 20px;
@@ -95,18 +111,38 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     opacity: 1;
 }
 
-.pika-prev,
-.is-rtl .pika-next {
+.pika-prev, .is-rtl .pika-next, .pika-prev:before {
     float: left;
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAUklEQVR42u3VMQoAIBADQf8Pgj+OD9hG2CtONJB2ymQkKe0HbwAP0xucDiQWARITIDEBEnMgMQ8S8+AqBIl6kKgHiXqQqAeJepBo/z38J/U0uAHlaBkBl9I4GwAAAABJRU5ErkJggg==');
     *left: 0;
 }
 
-.pika-next,
-.is-rtl .pika-prev {
+.pika-next, .is-rtl .pika-prev, .pika-next:before {
     float: right;
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAU0lEQVR42u3VOwoAMAgE0dwfAnNjU26bYkBCFGwfiL9VVWoO+BJ4Gf3gtsEKKoFBNTCoCAYVwaAiGNQGMUHMkjGbgjk2mIONuXo0nC8XnCf1JXgArVIZAQh5TKYAAAAASUVORK5CYII=');
     *right: 0;
+}
+
+.pika-prev:before, .pika-next:before {
+    margin-top: 15px;
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-size: @small-font-size;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.pika-prev:before {
+    margin-left: -15px; // align with pika-next:before
+    content: "\e60c";
+}
+
+.pika-next:before {
+    content: "\e60b";
 }
 
 .pika-prev.is-disabled,
@@ -141,6 +177,11 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     text-align: center;
 }
 
+// override style from normalize.less
+.pika-table abbr[title] {
+  border-bottom: none;
+}
+
 .pika-button {
     cursor: pointer;
     display: block;
@@ -153,7 +194,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     font-size: 12px;
     line-height: 15px;
     text-align: right;
-    background: #f5f5f5;
+    background-color: @pikaday-button;
 }
 
 .pika-week {
@@ -162,16 +203,22 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 }
 
 .is-today .pika-button {
-    color: #33aaff;
+    color: @highlighted-element;
     font-weight: bold;
 }
 
 .is-selected .pika-button {
     color: #fff;
     font-weight: bold;
-    background: #33aaff;
-    box-shadow: inset 0 1px 3px #178fe5;
-    border-radius: 3px;
+    background-color: @pikaday-selected-button;
+}
+
+.web .is-selected .pika-button:hover {
+    background-color: @pikaday-selected-button-hover;
+}
+
+.is-selected .pika-button:active {
+    background-color: @pikaday-selected-button-hover;
 }
 
 .is-disabled .pika-button {
@@ -181,9 +228,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     opacity: .3;
 }
 
-.pika-button:hover {
+.web .pika-button:hover {
     color: #fff !important;
-    background: #ff8000 !important;
-    box-shadow: none !important;
-    border-radius: 3px !important;
+    background-color: @pikaday-button-hover;
 }
