Added 'no list' selection to both tasks and notes

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -492,6 +492,10 @@ select {
   margin-bottom: @vertical-grid-half;
 }
 
+.arrow-link {
+  line-height: @vertical-grid;
+}
+
 // FORMS
 
 .form-group, .input-group {
