--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -629,6 +629,9 @@ li.datepicker-date {
 .toaster-notification.ng-enter, .toaster-notification.ng-leave,
 .pikaday-animation.ng-enter, .pikaday-animation.ng-leave {
   -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+  -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+  -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+  -ms-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
   transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
 }
 
