--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -139,6 +139,11 @@ div#closedAccordionTitleWrapper {
   padding-bottom: @vertical-grid-half;
 }
 
+.add-new-list-item-cancel {
+  color: #e22c09;
+  padding-right: 15px;
+}
+
 // PAGE HEADER
 
 header.static-page-header {
@@ -627,7 +632,8 @@ li.datepicker-date {
 }
 
 .toaster-notification.ng-enter, .toaster-notification.ng-leave,
-.pikaday-animation.ng-enter, .pikaday-animation.ng-leave {
+.pikaday-animation.ng-enter, .pikaday-animation.ng-leave,
+.select-list-visible-animation.ng-enter {
   -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
   -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
   -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
@@ -638,13 +644,15 @@ li.datepicker-date {
 .toaster-notification.ng-enter,
 .toaster-notification.ng-leave.ng-leave-active,
 .pikaday-animation.ng-enter,
-.pikaday-animation.ng-leave.ng-leave-active {
+.pikaday-animation.ng-leave.ng-leave-active,
+.select-list-visible-animation.ng-enter {
   opacity: 0;
 }
 
 .toaster-notification.ng-leave,
 .toaster-notification.ng-enter.ng-enter-active,
 .pikaday-animation.ng-leave,
-.pikaday-animation.ng-enter.ng-enter-active {
+.pikaday-animation.ng-enter.ng-enter-active,
+.select-list-visible-animation.ng-enter.ng-enter-active {
   opacity: 1;
 }
