increased left & right column gap

--- a/frontend/core/src/main/webapp/landing/custom.css
+++ b/frontend/core/src/main/webapp/landing/custom.css
@@ -1,7 +1,7 @@
 /* Customize container */
 @media (min-width: 768px) {
   .container {
-    max-width: 780px;
+    max-width: 880px;
   }
 }
 
@@ -106,4 +106,8 @@ a.button:hover {
   font-size: 12px;
   font-style:italic;
   color: gray;
+}
+
+.column-right {
+  padding-left: 60px;
 }
