Fixed omnibar scroll problems with long texts in content/description

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -135,6 +135,13 @@ Only universal code that would work by itself in any web page.
   color: @warning;
 }
 
+.show-more {
+  .smallest-font;
+  display: inherit;
+  .center-horizontally;
+  text-align: center;
+}
+
 // INPUTS
 
 .simple-input {
