--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -248,7 +248,7 @@ footer {
 
 // We want to horizontally and vertically center everything
 // once the screen size is bigger than a tablet
-@media (min-width: @maximum-width) and (min-height: @maximum-landscape-height) {
+@media (min-height: @maximum-landscape-height) {
   body {
     .no-slides-container {
       .center-container;
