Added 'beta' text to launch, login and sign up page logos

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -635,6 +635,14 @@ a.content:active {
   font-size: @banner-logo-size;
 }
 
+// beta text
+.web .icon-logo-with-text:after, .android .icon-logo-with-text:after {
+  content: "beta";
+  font-size: 10px;
+  position: absolute;
+  margin-left: -20px;
+}
+
 .icon-logo-only {
   color: @logo;
 }
