--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,9 +1,16 @@
+/*
+# extended mind - living style guide
+
+## introduction
+
+This is a style guide that documents the LESS files for the extended mind project.
+*/
 @import "normalize.less";
 @import "icon.less";
 @import "variables.less";
+@import "common.less";
 @import "main.less";
 @import "modal.less";
-@import "common.less";
 @import "swiper.less";
 @import "grid.less";
 @import "components.less";
