removed un-needed class

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -251,7 +251,7 @@ footer {
 @media (min-height: @maximum-landscape-height) {
   body {
     .no-slides-container {
-      .center-container;
+      position: relative;
       min-height: @maximum-landscape-height;
       max-height: @maximum-landscape-height;
       margin-top: -@maximum-landscape-height / 2;
