removed TIME parameter from .fade-color mixin. Now fades in 1 second

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -131,13 +131,13 @@ And to four sections:
 }">Hover over me.</div>
 ```
 */
-.fade-color(@fade-time) {
-  -o-transition: @fade-time linear;
-  -moz-transition: @fade-time linear;
-  -khtml-transition: @fade-time linear;
-  -webkit-transition: @fade-time linear;
-  -ms-transition: @fade-time linear;
-  transition: @fade-time linear;
+.fade-color {
+  -o-transition: 1 linear;
+  -moz-transition: 1 linear;
+  -khtml-transition: 1 linear;
+  -webkit-transition: 1 linear;
+  -ms-transition: 1 linear;
+  transition: 1 linear;
 }
 
 // TYPOGRAPHY
