--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -123,25 +123,21 @@ And to four sections:
 }
 
 /*
-`.fade-color` fades to new color in one second. Use the .fade-color mixin instead of the extracted code below.
+`.fade-color` fades to new color. Use the .fade-color mixin instead of the extracted code below.
+
+* EXAMPLE NOT WORKING (probably :hover doesn't work with the styleguide)
 
 ```markup
 <div style=":hover {
   color: red;
-  -o-transition: 1 linear;
-  -moz-transition: 1 linear;
-  -khtml-transition: 1 linear;
-  -webkit-transition: 1 linear;
-  -ms-transition: 1 linear;
-  transition: 1 linear;
+  -o-transition: 0.2 linear;
+  -moz-transition: 0.2 linear;
+  -khtml-transition: 0.2 linear;
+  -webkit-transition: 0.2 linear;
+  -ms-transition: 0.2 linear;
+  transition: 0.2 linear;
   }
 ">Hover over me.</div>
-
-input[type="checkbox"]:checked ~ a {
-  color: red;
-  .fade-color;
-  }
-
 ```
 */
 .fade-color {
