--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -16,3 +16,4 @@ This is a style guide that documents the LESS files for the extended mind projec
 @import "components.less";
 @import "pages.less";
 @import "pikaday.less";
+@import "inputs.less";
